Converted unix timestamp to readable string and fixed bug causing extended text on tweet components

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -31,7 +31,7 @@ body {
   height: 100%;
   margin-left: auto;
   margin-right: auto;
-  background-color: #ffffff;
+  background-color: #eeeeee;
 
  }
 
